[package]
name = "github-webhooks"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Utilities for handling GitHub webhooks in various Rust web frameworks"
license = "MIT"
authors = [
	"Carter Himmel <carter@truffle.vip>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
hex = "0.4"
ring = "0.16"
serde_json = "1"
thiserror = "1"

axum = { version = "0.6", features = ["macros", "headers", "tokio"], optional = true }
headers = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }

[features]
default = ["axum"]
axum = ["dep:axum", "dep:headers", "dep:http"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
once_cell = { version = "1" }
